--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
     <script src="./Libs/Smooth-scroll/smooth-scrollbar.js"></script>
     <script src="./Libs/DynamicAdapt/script.js"></script>
     <script src="./js/slick.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
