--- a/index.html
+++ b/index.html
@@ -673,13 +673,13 @@
         </footer>
 
     </div>
-    <script src="../js/jQuery.js"></script>
-    <script src="../js/slider.js"></script>
-    <script src="../js/owl.carousel.min.js"></script>
-    <script src="../Libs/Smooth-scroll/smooth-scrollbar.js"></script>
-    <script src="../Libs/DynamicAdapt/script.js"></script>
-    <script src="../js/slick.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="./js/jQuery.js"></script>
+    <script src="./js/slider.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
+    <script src="./Libs/Smooth-scroll/smooth-scrollbar.js"></script>
+    <script src="./Libs/DynamicAdapt/script.js"></script>
+    <script src="./js/slick.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
