--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="css/style.min.css" />
-    <title>Реферальная программа</title>
+    <title>Главная</title>
 </head>
 
 <body>
-
     <div class="admin-wrapper">
         <header class="header">
             <div class="header__container">
@@ -679,7 +678,7 @@
     <script src="./Libs/Smooth-scroll/smooth-scrollbar.js"></script>
     <script src="./Libs/DynamicAdapt/script.js"></script>
     <script src="./js/slick.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
