--- a/index.html
+++ b/index.html
@@ -670,12 +670,9 @@
                 </div>
             </div>
         </footer>
-
     </div>
-    <script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
+
+    <script src="./js/jquery.js"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./Libs/Smooth-scroll/smooth-scrollbar.js"></script>
