--- a/index.html
+++ b/index.html
@@ -360,15 +360,15 @@
                 <div class="col-12 col-xl-6 admin__data">
                     <h2 class="admin__h2">График</h2>
                     <div class="admin__h3">
-                        <a href="#graf1" class="graph-link h3__active">График1</a>
-                        <a href="#table1" class="graph-link">Панель управления</a>
+                        <a href="#graf1" class="graph-link">График1</a>
+                        <a href="#table1" class="graph-link h3__active">Панель управления</a>
                     </div>
 
-                    <div class="data__graph graph__active" id="graf1">
+                    <div class="data__graph" id="graf1">
                         <div id="customChart1"></div>
                     </div>
 
-                    <div class="data__graph" id="table1">
+                    <div class="data__graph graph__active" id="table1">
                         <p class="small__text graph__text">Соотношение пополнения и вывода в USDT (По текущему курсу)
                         </p>
                         <div class="graph">
@@ -393,13 +393,13 @@
                 <div class="col-12 col-xl-6 admin__data data_2">
                     <h2 class="admin__h2">График</h2>
                     <div class="admin__h3">
-                        <a href="#graf2" class="table-link table__active">График2</a>
-                        <a href="#table2" class="table-link">Панель управления</a>
+                        <a href="#graf2" class="table-link">График2</a>
+                        <a href="#table2" class="table-link table__active">Панель управления</a>
                     </div>
-                    <div class="data__graph graph__active2" id="graf2">
+                    <div class="data__graph" id="graf2">
                         <div id="customChart2"></div>
                     </div>
-                    <div class="data__graph" id="table2">
+                    <div class="data__graph graph__active2" id="table2">
                         <img class="img-6" src="images/Admin/investing.png" alt="">
                         <div class="currency-table one" data-scrollbar="true" tabindex="-1"
                             style="overflow: hidden; outline: none;">
