--- a/index.html
+++ b/index.html
@@ -372,6 +372,22 @@
                         <p class="small__text graph__text">Соотношение пополнения и вывода в USDT (По текущему курсу)
                         </p>
                         <div id="chart3"></div>
+                        <!-- <div class="graph">
+                            <img src="images/Admin/ellipse_small.svg" alt="">
+                            <img src="images/Admin/ellipse.svg" alt="">
+                            <img src="images/Admin/circle.svg" alt="">
+                            <img src="images/Admin/ellipse_inner.svg" alt="">
+                        </div>
+                        <div class="graph_data">
+                            <div class="d-flex">
+                                <div class="green"></div>
+                                <p>Пополнено</p>
+                            </div>
+                            <div class="d-flex">
+                                <div class="oringe"></div>
+                                <p>Пополнено</p>
+                            </div>
+                        </div> -->
                     </div>
 
                 </div>
