--- a/admin_profile.html
+++ b/admin_profile.html
@@ -244,132 +244,110 @@
 
 		</div>
 
-		<div class="personal">
-			<div class="scroll-content">
-				<div class="tarif-choose-1-outer tarif-choose-1-outer1 tarif-choose-1-outer-margin">
-					<div class="tarif-choose-track">
-						<label class="tarif-choosen-item-wrap tarif__2">
-							<input type="radio" name="tarif">
-							<div class="tarif-choosen-item tarif__in">
-								<div class="tarif-choosen-item-img">
-									<img src="./images/Admin/portfolio.svg" alt="#">
-								</div>
-								<div class="tarif-choosen-text">
-									<strong>7</strong>
-									<span>Портфель клиентов</span>
-								</div>
-							</div>
-						</label>
-						<label class="tarif-choosen-item-wrap tarif__2">
-							<input type="radio" name="tarif">
-							<div class="tarif-choosen-item tarif__in">
-								<div class="tarif-choosen-item-img">
-									<img src="./images/Admin/cryptocurrency.svg" alt="#">
-								</div>
-								<div class="tarif-choosen-text">
-									<strong>2</strong>
-									<span>Активных <br> криптовалют</span>
-								</div>
-							</div>
-						</label>
-						<label class="tarif-choosen-item-wrap tarif__2">
-							<input type="radio" name="tarif">
-							<div class="tarif-choosen-item tarif__in">
-								<div class="tarif-choosen-item-img">
-									<img src="./images/Admin/team.svg" alt="#">
-								</div>
-								<div class="tarif-choosen-text">
-									<strong>24</strong>
-									<span>Регистрации <br> пользователей</span>
-								</div>
-							</div>
-						</label>
-						<label class="tarif-choosen-item-wrap tarif__2">
-							<input type="radio" name="tarif">
-							<div class="tarif-choosen-item tarif__in">
-								<div class="tarif-choosen-item-img">
-									<img src="./images/Admin/pie-chart.svg" alt="#">
-								</div>
-								<div class="tarif-choosen-text">
-									<span class="tarif-num"><strong>8424.7621376</strong></span>
-									<span>Всего вывели (USDT)</span>
-								</div>
-							</div>
-						</label>
-					</div>
-					<div class="tarif-slider">
-						<label class="tarif-choosen-item-wrap tarif__2">
-							<input type="radio" name="tarif">
-							<div class="tarif-choosen-item tarif__in">
-								<div class="tarif-choosen-item-img">
-									<img src="./images/Admin/portfolio.svg" alt="#">
-								</div>
-								<div class="tarif-choosen-text">
-									<strong>7</strong>
-									<span>Портфель клиентов</span>
-								</div>
-							</div>
-						</label>
-						<label class="tarif-choosen-item-wrap tarif__2">
-							<input type="radio" name="tarif">
-							<div class="tarif-choosen-item tarif__in">
-								<div class="tarif-choosen-item-img">
-									<img src="./images/Admin/cryptocurrency.svg" alt="#">
-								</div>
-								<div class="tarif-choosen-text">
-									<strong>2</strong>
-									<span>Активных <br> криптовалют</span>
-								</div>
-							</div>
-						</label>
-						<label class="tarif-choosen-item-wrap tarif__2">
-							<input type="radio" name="tarif">
-							<div class="tarif-choosen-item tarif__in">
-								<div class="tarif-choosen-item-img">
-									<img src="./images/Admin/team.svg" alt="#">
-								</div>
-								<div class="tarif-choosen-text">
-									<strong>24</strong>
-									<span>Регистрации <br> пользователей</span>
-								</div>
-							</div>
-						</label>
-						<label class="tarif-choosen-item-wrap tarif__2">
-							<input type="radio" name="tarif">
-							<div class="tarif-choosen-item tarif__in">
-								<div class="tarif-choosen-item-img">
-									<img src="./images/Admin/pie-chart.svg" alt="#">
-								</div>
-								<div class="tarif-choosen-text">
-									<span class="tarif-num"><strong>8424.7621376</strong></span>
-									<span>Всего вывели (USDT)</span>
-								</div>
-							</div>
-						</label>
-					</div>
-				</div>
-			</div>
-			<div class="dashboard_title">
-				<h2 class="admin__h2 admin__h2_1">USDT</h2>
-				<div class="buttons">
-					<button class="blue__button" type="">Подробно</button>
-					<button class="blue__button last_btn" type="">Редактировать</button>
-				</div>
-			</div>
-			<div class="row row__graph">
-				<div class="col-12 col-lg-6 pr">
-					<div id="chart1"></div>
-				</div>
-				<div class="col-12 col-lg-6 pl">
-					<div id="customChart2"></div>
-				</div>
-				<div class="col-12 mt">
-					<div id="customChart3"></div>
-				</div>
-			</div>
-		</div>
+        <div class="personal">
+            <h2 class="admin__h2">Профиль</h2>
+            <div class="profile">
+                <div class="profile-user">
+                    <img src="./images/custom/profilr-pic.png" alt="profilr-pic" class="profile-user__img">
+                    <button class="profile-user__btn profile-user__edit"><img src="./images/custom/Edit.png" alt="Edit.png">Изменить</button>
+                    <button class="profile-user__btn profile-user__delete"><img src="./images/custom/Delete.svg" alt="Delete">Удалить</button>
+                </div>
+                <div class="profile-table__wrapper">
+                    <div class="profile-table">
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                ID
+                            </div>
+                            <div class="profile-table__td">
+                                1
+                            </div>
+                        </div>
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                Пользователь
+                            </div>
+                            <div class="profile-table__td">
+                                admin
+                            </div>
+                        </div>
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                Телефон
+                            </div>
+                            <div class="profile-table__td">
+                                +812321321152143
+                            </div>
+                        </div>
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                Имя
+                            </div>
+                            <div class="profile-table__td">
+                                (не задано)
+                            </div>
+                        </div>
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                Фамилия
+                            </div>
+                            <div class="profile-table__td">
+                                Васильевич
+                            </div>
+                        </div>
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                Email
+                            </div>
+                            <div class="profile-table__td">
+                                admin@gmail.com
+                            </div>
+                        </div>
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                Роль
+                            </div>
+                            <div class="profile-table__td">
+                                Super Administrator
+                            </div>
+                        </div>
+                        <div class="profile-table__tr" >
+                            <div class="profile-table__td" style="padding: 8px 12px;">
+                                Статус
+                            </div>
+                            <div class="profile-table__td" style="padding: 8px 6px">
+                                <button class="profile-table__active">Активно</button>
+                            </div>
+                        </div>
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                Создано
+                            </div>
+                            <div class="profile-table__td">
+                                2021-07-23   |   01:40:29
+                            </div>
+                        </div>
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                Обновлено
+                            </div>
+                            <div class="profile-table__td">
+                                2021-07-23   |   01:40:29
+                            </div>
+                        </div>
+                        <div class="profile-table__tr">
+                            <div class="profile-table__td">
+                                Последний визит
+                            </div>
+                            <div class="profile-table__td">
+                                2021-07-23   |   01:40:29
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-		<footer class="footer">
+        <footer class="footer">
 			<div class="container-fluid">
 				<div class="footer__container">
 					<a href="#" class="footer-left">
@@ -379,11 +357,8 @@
 			</div>
 		</footer>
 	</div>
-
 	<script src="./js/jquery.js"></script>
 	<script src="./js/slick.js"></script>
-	<script src="./js/apexcharts.js"></script>
-	<script src="./js/chart.js"></script>
 	<script src="./js/script.js"></script>
 </body>
 
